syntax = "proto3";

package api.system.v1;

import "api/system/v1/system.proto";
import "google/api/annotations.proto";

option go_package = "kratosx-fashion/api/system/v1;v1";
option java_multiple_files = true;
option java_package = "api.system.v1";

// 用户服务
// @Auth
// @Limit
service User {
	rpc CreateUser (UserRequest) returns (IDReply){
		option (google.api.http) = {
			post: "/"
			body: "*"
		};
	}

	rpc UpdateUser (UserRequest) returns (EmptyReply){
		option (google.api.http) = {
			put: "/"
			body: "*"
		};
	}

	// @Logger
	rpc UpdatePassword (PasswordRequest) returns (EmptyReply){
		option (google.api.http) = {
			put: "/password"
			body: "*"
		};
	}

	rpc DeleteUser (IDsRequest) returns (EmptyReply){
		option (google.api.http) = {
			delete: "/{ids}"
		};
	}

	rpc GetUser (IDRequest) returns (UserReply){
		option (google.api.http) = {
			get: "/{id}"
		};
	}

	// @Logger
	rpc ResetPassword (IDRequest) returns (EmptyReply){
		option (google.api.http) = {
			put: "/reset-password/{id}"
		};
	}

	rpc InitUserInfo (EmptyRequest) returns (UserState){
		option (google.api.http) = {
			get: "/init/info"
		};
	}

	rpc ListUser (ListSearchRequest) returns (ListUserReply){
		option (google.api.http) = {
			post: "/list"
			body: "*"
		};
	}

	rpc ListUserLog(ListRequest) returns (ListUserLogReply){
		option (google.api.http) = {
			get: "/log/list/{current}/{pageSize}"
		};
	}
}